Upgrade to Java 21 with Virtual Threads